force-app/main/default/objects/Account/fields/account_revinew__c.field-meta.xml
<CustomField>
    <fullName>account_revinew__c</fullName>
    <label>account revinew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>