force-app/main/default/objects/Account/fields/opertunities_rollup__c.field-meta.xml
<CustomField>
    <fullName>opertunities_rollup__c</fullName>
    <label>opertunities-rollup</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>