force-app/main/default/objects/Account/fields/SupportEmail__c.field-meta.xml
<CustomField>
    <fullName>SupportEmail__c</fullName>
    <label>SupportEmail</label>
    <type>Email</type>
</CustomField>