force-app/main/default/objects/Account/fields/swileywiley__c.field-meta.xml
<CustomField>
    <fullName>swileywiley__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is swiley</description>
    <inlineHelpText>check for swiley</inlineHelpText>
    <label>swileywiley</label>
    <type>Checkbox</type>
</CustomField>