force-app/main/default/objects/Account/recordTypes/Wholsale.recordType-meta.xml
<RecordType>
    <fullName>Wholsale</fullName>
    <active>true</active>
    <label>Wholsale</label>
</RecordType>